@@ -1,6 +1,7 @@
 ??/??/2009 autofs-5.0.5
 -----------------------
 - fix dumb libxml2 check
+- fix nested submount expire deadlock.
 
 4/11/2008 autofs-5.0.4
 -----------------------
